--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,28 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-	--background: #282c33;
-	--primary-text: #ffffff;
-	--secondary-text: #abb2bf;
-}
-
 body {
-	color: var(--primary-text);
-	background: var(--background);
+	color: #ffffff;
+	background: #282c33;
 	width: 1280px;
 	margin: auto;
 	font-size: 16px;
 	font-weight: 500;
+	font-style: normal;
 	line-height: normal;
-
 	transition-delay: 1s; /* delays for 1 second */
 	-webkit-transition-delay: 1s; /* for Safari & Chrome */
-}
-
-header span {
-	color: #c778dd;
-}
-header .active {
-	color: white;
 }
