--- a/src/app/main.css
+++ b/src/app/main.css
@@ -11,12 +11,6 @@
 			line-height: 25px;
 		}
 	}
-	.group-2 {
-		.dots {
-			width: 100px;
-			height: 100px;
-		}
-	}
 	.current-work {
 		width: 402px;
 	}
@@ -24,7 +18,7 @@
 .quote {
 	.name {
 		right: -1px;
-		top: 85px;
+		top: 117px;
 		& + .quote-mark {
 			bottom: -14px;
 			right: 12px;
@@ -33,6 +27,15 @@
 }
 .projects {
 	margin-top: 137px;
+	h2 {
+		width: 701px;
+		div {
+			font-size: 32px;
+		}
+	}
+}
+.skills {
+	margin-top: 106px;
 	h2 {
 		width: 701px;
 		div {
